# pretty-gist

./: ChangeLog.md  LICENSE  README.md  brittany.yaml  package.yaml  pretty-gist.cabal  stack-9.2.yaml  stack-9.4.yaml  stack.yaml
src/: Gist.hs
src/Gist/: Classless.hs  Dynamic.hs  Monadic.hs  OneClass.hs  Simple.hs  TwoClass.hs
test/: ChessBoard.hs  Classless.hs  Dynamic.hs  Monadic.hs  OneClass.hs  Simple.hs  Spec.hs  TwoClass.hs
test/ChessBoard/: Classless.hs  Monadic.hs  OneClass.hs  Simple.hs  TwoClass.hs
