cabal-version: 2.2

name:           pretty-gist
version:        0.0.0.1
description:    Please see the README on GitHub at <https://github.com/ChickenProp/pretty-gist#readme>
homepage:       https://github.com/ChickenProp/pretty-gist#readme
bug-reports:    https://github.com/ChickenProp/pretty-gist/issues
author:         Phil Hazelden
maintainer:     philip.hazelden@gmail.com
copyright:      2022 Phil Hazelden
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/ChickenProp/pretty-gist

common common
  default-language: Haskell2010
  ghc-options: -Wall -Wmissing-deriving-strategies -Wredundant-constraints
  default-extensions:
    AllowAmbiguousTypes
    ConstrainedClassMethods
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

library
  import: common
  exposed-modules:
      Gist.Dynamic
      Gist.Monadic
      Gist.Simple
  other-modules:
      Paths_pretty_gist
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , prettyprinter
    , text
    , transformers

test-suite pretty-gist-test
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Dynamic
      Monadic
      Simple
      Paths_pretty_gist
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , containers
    , hspec
    , hspec-core
    , hspec-expectations
    , lens
    , generic-lens
    , pretty-gist
    , prettyprinter
    , text
